URL_SHORTENER-17: Changed Region to ap-northeast-1

--- a/config/stages-sample/common.yml
+++ b/config/stages-sample/common.yml
@@ -1,6 +1,6 @@
 service: 'your-project'
 awsAccountId: 'Your-AWS-Acconnt-ID'
-defaultRegion: 'us-east-1'
+defaultRegion: 'ap-northeast-1'
 deploymentBucketName: 'your-serverless-deployment'
 cmsService: 'your-cms-project'
 
