--- a/terraform/terraform.tfvars.sample
+++ b/terraform/terraform.tfvars.sample
@@ -1,6 +1,6 @@
 prj_prefix = "your-porject-name"
-region_api = "us-east-1"
-region_site = "us-east-1"
+region_api = "ap-northeast-1"
+region_acm = "us-east-1"
 route53_zone_id = "Set your route53 zone id"
-domain_api_prd = "your-domain-api.example.com"
-domain_api_dev = "your-domain-api-dev.example.com"
+domain_api_prd = "rd.example.com"
+domain_api_dev = "rd-dev.example.com"
